# internationalgirlsacademy

./: .env.example  .gitignore  README.md  dev.sh  vercel.json
backend/: .gitignore  .vercelignore  app.db  create_admin.py  pyproject.toml  pyproject.toml.disabled  pytest.ini  run_tests.py  simple_user_api.py  users.db
backend/src/app/: main.py
backend/src/app/api/: router.py  users.py
backend/src/app/api/v1/: availability.py  chatbot.py  event_registration.py  events.py  items.py  meetings.py  modules.py  router.py  user_items.py  users.py  zoom.py
backend/src/app/core/: auth.py  config.py  database.py  security.py
backend/src/app/domain/: schemas.py
backend/src/app/mcp/: routes.mcp.json
backend/src/app/migrations/: 001_initial.sql  002_user_items.sql  003_user_modules.sql  004_fix_user_uuid.sql  005_add_meetings_table.sql  006_add_admin_type.sql
backend/src/app/models/: user.py
backend/src/app/schemas/: user.py
backend/src/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: __init__.py  conftest.py  test_event_registration.py  test_events.py  test_integration.py  test_items.py  test_meetings.py  test_modules.py  test_user_items.py  test_users.py
frontend/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: DataManagement.tsx  globals.css  layout.tsx  login.tsx  organizerDashboard.tsx  page.tsx  signup.tsx  volunteerDashboard.tsx
frontend/src/app/events/: page.tsx  (+1 more)
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts  supabase.ts
frontend/src/types/: global.d.ts
(+61 files in other folders)
